--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
-    "ganache-cli": "6.1.3",
     "solc": "0.4.23"
   },
   "scripts": {
-    "start": "./node_modules/.bin/babel src/main.js --out-dir lib && node lib/src/main.js"
+    "start": "./node_modules/.bin/babel src/*.js --out-dir lib && node lib/src/main.js"
   }
 }
